Switch to stable-ordered sets for TableSelector calls